Add virtual threads example